# retrowin32

./: Cargo.toml  build-asm.sh  build-rosetta.sh
cli/: Cargo.toml
cli/src/: main.rs
doc/: mac-notes.md
exe/ops/: build-dll  build.sh  kernel32.def  kernel32.lib  lld-link  ops.asm  ops.cc  ops.zig
memory/: Cargo.toml  memory.rs
rosetta/: Cargo.toml
win32/: Cargo.toml
win32/derive/src/: gen.rs  main.rs
win32/src/: ldt.rs  lib.rs  machine.rs  reader.rs  shims.rs  shims_emu.rs  shims_unicorn.rs  trampoline_x86.s  trampoline_x86_64.s
win32/src/pe/: exports.rs  file.rs  imports.rs  loader.rs  resources.rs
win32/src/winapi/: alloc.rs  builtin.rs  ddraw.rs  dsound.rs  mod.rs  stack_args.rs  user32.rs
win32/src/winapi/kernel32/: dll.rs  memory.rs  mod.rs
x86/: Cargo.toml
x86/src/: icache.rs  lib.rs  memory.rs  registers.rs  x86.rs
x86/src/ops/: basic.rs  math.rs  table.rs
x86/src/uops/: asm.rs  eval.rs  mod.rs
