[package]
name = "retrowin32"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1.10"
iced-x86 = "1.17.0"
log = "0.4.17"

[features]
default = ["cpuemu", "sdl"]
sdl = ["dep:sdl2"]
cpuemu = []

[dependencies.sdl2]
version = "0.35.2"
features = ["unsafe_textures"]
optional = true

[dependencies.win32]
path = "../win32"
